# ByteForge

./: .gitignore  CMakeLists.txt  README.md  StringCLI.txt
include/stratum/: string.hpp
src/: string.cpp
tests/: test_string.cpp
